fixing overflow pb on header

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -108,6 +108,7 @@ ul {
     align-items: center;
     justify-content: flex-end;
     column-gap: 2rem;
+    padding: 0.5rem;
 }
 
 .nav_item a {
@@ -142,9 +143,11 @@ ul {
     font-weight: 500;
     cursor: pointer;
 }
-.header{
+
+.header {
     margin-top: -20px;
 }
+
 .register_btn:hover {
     transition: all 0.5s ease-in-out;
     box-shadow: 0.3rem 0.3rem #5844c1, -0.3rem -0.3rem #8b76f4;
@@ -152,13 +155,14 @@ ul {
 
 .sticky_header {
     width: 100%;
-    position:sticky;
+    position: sticky;
     top: -20px;
     left: 0;
     z-index: 99;
     background: #fff;
 
 }
+
 .logo h2 a {
     text-decoration: none;
     transition: color 0.3s ease;
@@ -255,7 +259,7 @@ ul {
     }
 }
 
-.styles-container{
+.styles-container {
     width: 42px;
     height: 24px;
     border: 1.5px solid #7d66f3;
@@ -267,19 +271,19 @@ ul {
     margin-left: 10px;
     position: relative;
     cursor: pointer;
-  }
-  
-  .styles-icon{
+}
+
+.styles-icon {
     font-size: 11px;
-  }
-  
-  .styles-ball{
+}
+
+.styles-ball {
     width: 15px;
     height: 15px;
     background-color: #A899F7;
     border-radius: 50%;
     position: absolute;
-  }
+}
 
 
 
@@ -293,7 +297,7 @@ ul {
     }
 
     .nav_item a {
-       
+
         font-size: 1rem;
     }
 
@@ -301,4 +305,3 @@ ul {
         gap: 1.5rem;
     }
 }
-
